--- a/portfolio.html
+++ b/portfolio.html
@@ -44,6 +44,7 @@
     <main>
       <section class="portfolio-background" class="section">
         <div class="container">
+          <h1 class="portfolio-h1">Portfolio</h1>
           <ul class="buttonlist-setup">
             <li><button class="button-list" type="button">All</button></li>
             <li><button class="button-list" type="button">Web Site</button></li>
@@ -158,14 +159,22 @@
       </section>
     </main>
     <footer class="background-footer section">
-      <div class="container">
-        <a class="logo2" href="./index.html"
-          ><span class="logo-item">WEB</span>STUDIO</a
-        >
-        <p class="footer-item">
-          Increase the flow of customers and sales for your business with
-          digital marketing&#38;growth solutions.
-        </p>
+      <div class="container footer-setup">
+        <div>
+          <a class="logo2" href="./index.html"
+            ><span class="logo-item">WEB</span>STUDIO</a
+          >
+          <p class="footer-item">
+            Increase the flow of customers and sales for your business with
+            digital marketing&#38;growth solutions.
+          </p>
+        </div>
+        <div class="social-media">
+          <p class="social-media-title">Social media</p>
+          <svg width="208" height="40" class="media-setup">
+            <use href="./img/icons.svg#icon-Traling-Icons"></use>
+          </svg>
+        </div>
       </div>
     </footer>
   </body>
