--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         <div class="container">
           <ul class="list-setup">
             <li>
-              <svg><use href="./img/icons.svg#icon-astronaut-1"></use></svg>
+              <svg width="264" height="112">
+                <use href="./img/icons.svg#icon-Icon-1"></use>
+              </svg>
               <h3 class="list-item">Strategy</h3>
               <p class="list-description">
                 Our goals is to identity the business problem to walk away with
@@ -60,7 +62,9 @@
               </p>
             </li>
             <li>
-              <svg><use href="./img/icons.svg#icon-Client-2"></use></svg>
+              <svg width="264" height="112">
+                <use href="./img/icons.svg#icon-Icon-2"></use>
+              </svg>
               <h3 class="list-item">Punctually</h3>
               <p class="list-description">
                 Bring the key message to the brand's audience for the best price
@@ -68,13 +72,20 @@
               </p>
             </li>
             <li>
+              <svg width="264" height="112">
+                <use href="./img/icons.svg#icon-Icon-3"></use>
+              </svg>
               <h3 class="list-item">Dilligence</h3>
               <p class="list-description">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
+            <li></li>
             <li>
+              <svg width="264" height="112">
+                <use href="./img/icons.svg#icon-Icon-4"></use>
+              </svg>
               <h3 class="list-item">Technologies</h3>
               <p class="list-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -84,7 +95,7 @@
           </ul>
         </div>
       </section>
-      <section>
+      <section class="work-section">
         <div class="container">
           <h2 class="title-item">What Are We Doing</h2>
           <ul class="list-doing-setup">
@@ -125,6 +136,9 @@
               <div class="table-workers">
                 <h3 class="list1-item">Mark Guerrero</h3>
                 <p class="list-description1">Product Designer</p>
+                <svg width="232" height="40" class="media-setup">
+                  <use href="./img/icons.svg#icon-Traling-Icons"></use>
+                </svg>
               </div>
             </li>
             <li>
@@ -136,6 +150,9 @@
               <div class="table-workers">
                 <h3 class="list1-item">Tom Ford</h3>
                 <p class="list-description1">Fronted Developer</p>
+                <svg width="232" height="40" class="media-setup">
+                  <use href="./img/icons.svg#icon-Traling-Icons"></use>
+                </svg>
               </div>
             </li>
             <li>
@@ -147,6 +164,9 @@
               <div class="table-workers">
                 <h3 class="list1-item">Camilla Garcia</h3>
                 <p class="list-description1">Marketing</p>
+                <svg width="232" height="40" class="media-setup">
+                  <use href="./img/icons.svg#icon-Traling-Icons"></use>
+                </svg>
               </div>
             </li>
             <li>
@@ -158,21 +178,40 @@
               <div class="table-workers">
                 <h3 class="list1-item">Daniel Wilson</h3>
                 <p class="list-description1">UI Designer</p>
+                <svg width="232" height="40" class="media-setup">
+                  <use href="./img/icons.svg#icon-Traling-Icons"></use>
+                </svg>
               </div>
             </li>
           </ul>
         </div>
       </section>
+      <section class="section customer-background">
+        <div class="container">
+          <h2 class="customer-title">Customers</h2>
+          <svg width="1228" height="88" class="clients-setup">
+            <use href="./img/icons.svg#icon-Customers-logo"></use>
+          </svg>
+        </div>
+      </section>
     </main>
     <footer class="background-footer section">
-      <div class="container">
-        <a class="logo2" href="./index.html"
-          ><span class="logo-item">WEB</span>STUDIO</a
-        >
-        <p class="footer-item">
-          Increase the flow of customers and sales for your business with
-          digital marketing&#38;growth solutions.
-        </p>
+      <div class="container footer-setup">
+        <div>
+          <a class="logo2" href="./index.html"
+            ><span class="logo-item">WEB</span>STUDIO</a
+          >
+          <p class="footer-item">
+            Increase the flow of customers and sales for your business with
+            digital marketing&#38;growth solutions.
+          </p>
+        </div>
+        <div class="social-media">
+          <p class="social-media-title">Social media</p>
+          <svg width="208" height="40" class="media-setup">
+            <use href="./img/icons.svg#icon-Traling-Icons"></use>
+          </svg>
+        </div>
       </div>
     </footer>
   </body>
