--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
         <div class="container">
           <ul class="list-setup">
             <li>
-              <svg width="264" height="112">
-                <use href="./img/icons.svg#icon-Icon-1"></use>
-              </svg>
+              <div class="icons-setup">
+                <svg width="64" height="64">
+                  <use href="./img/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="list-item">Strategy</h3>
               <p class="list-description">
                 Our goals is to identity the business problem to walk away with
@@ -62,9 +64,11 @@
               </p>
             </li>
             <li>
-              <svg width="264" height="112">
-                <use href="./img/icons.svg#icon-Icon-2"></use>
-              </svg>
+              <div class="icons-setup">
+                <svg width="64" height="64">
+                  <use href="./img/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="list-item">Punctually</h3>
               <p class="list-description">
                 Bring the key message to the brand's audience for the best price
@@ -72,20 +76,24 @@
               </p>
             </li>
             <li>
-              <svg width="264" height="112">
-                <use href="./img/icons.svg#icon-Icon-3"></use>
-              </svg>
+              <div class="icons-setup">
+                <svg width="64" height="64">
+                  <use href="./img/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="list-item">Dilligence</h3>
               <p class="list-description">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li></li>
+
             <li>
-              <svg width="264" height="112">
-                <use href="./img/icons.svg#icon-Icon-4"></use>
-              </svg>
+              <div class="icons-setup">
+                <svg width="64" height="64">
+                  <use href="./img/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="list-item">Technologies</h3>
               <p class="list-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -136,9 +144,28 @@
               <div class="table-workers">
                 <h3 class="list1-item">Mark Guerrero</h3>
                 <p class="list-description1">Product Designer</p>
-                <svg width="232" height="40" class="media-setup">
-                  <use href="./img/icons.svg#icon-Traling-Icons"></use>
-                </svg>
+                <ul class="media-icons">
+                  <li>
+                    <svg class="icons" width="16" height="16">
+                      <use href="./img/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="icons" width="16" height="16">
+                      <use href="#./img/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="icons" width="16" height="16">
+                      <use href="./img/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="icons" width="16" height="16">
+                      <use href="./img/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -150,9 +177,28 @@
               <div class="table-workers">
                 <h3 class="list1-item">Tom Ford</h3>
                 <p class="list-description1">Fronted Developer</p>
-                <svg width="232" height="40" class="media-setup">
-                  <use href="./img/icons.svg#icon-Traling-Icons"></use>
-                </svg>
+                <ul class="media-icons">
+                  <li>
+                    <svg class="icons" width="16" height="16">
+                      <use href="./img/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="icons" width="16" height="16">
+                      <use href="./img/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="icons" width="16" height="16">
+                      <use href="./img/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="icons" width="16" height="16">
+                      <use href="./img/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -164,9 +210,28 @@
               <div class="table-workers">
                 <h3 class="list1-item">Camilla Garcia</h3>
                 <p class="list-description1">Marketing</p>
-                <svg width="232" height="40" class="media-setup">
-                  <use href="./img/icons.svg#icon-Traling-Icons"></use>
-                </svg>
+                <ul class="media-icons">
+                  <li>
+                    <svg class="icons" width="16" height="16">
+                      <use href="./img/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="icons" width="16" height="16">
+                      <use href="./img/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="icons" width="16" height="16">
+                      <use href="./img/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="icons" width="16" height="16">
+                      <use href="./img/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -178,9 +243,28 @@
               <div class="table-workers">
                 <h3 class="list1-item">Daniel Wilson</h3>
                 <p class="list-description1">UI Designer</p>
-                <svg width="232" height="40" class="media-setup">
-                  <use href="./img/icons.svg#icon-Traling-Icons"></use>
-                </svg>
+                <ul class="media-icons">
+                  <li>
+                    <svg class="icons" width="16" height="16">
+                      <use href="./img/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="icons" width="16" height="16">
+                      <use href="./img/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="icons" width="16" height="16">
+                      <use href="./img/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </li>
+                  <li>
+                    <svg class="icons" width="16" height="16">
+                      <use href="./img/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -189,9 +273,38 @@
       <section class="section customer-background">
         <div class="container">
           <h2 class="customer-title">Customers</h2>
-          <svg width="1228" height="88" class="clients-setup">
-            <use href="./img/icons.svg#icon-Customers-logo"></use>
-          </svg>
+          <ul class="customer-list">
+            <li>
+              <svg width="104" height="56">
+                <use href="./img/icons.svg#icon-Client-1"></use>
+              </svg>
+            </li>
+            <li>
+              <svg width="104" height="56">
+                <use href="./img/icons.svg#icon-Client-2"></use>
+              </svg>
+            </li>
+            <li>
+              <svg width="104" height="56">
+                <use href="./img/icons.svg#icon-Client-3"></use>
+              </svg>
+            </li>
+            <li>
+              <svg width="104" height="56">
+                <use href="./img/icons.svg#icon-Client-4"></use>
+              </svg>
+            </li>
+            <li>
+              <svg width="104" height="56">
+                <use href="./img/icons.svg#icon-Client-5"></use>
+              </svg>
+            </li>
+            <li>
+              <svg width="104" height="56">
+                <use href="./img/icons.svg#icon-Client-6"></use>
+              </svg>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
@@ -208,9 +321,28 @@
         </div>
         <div class="social-media">
           <p class="social-media-title">Social media</p>
-          <svg width="208" height="40" class="media-setup">
-            <use href="./img/icons.svg#icon-Traling-Icons"></use>
-          </svg>
+          <ul class="media-icons-footer">
+            <li>
+              <svg class="icons" width="24" height="24">
+                <use href="./img/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icons" width="24" height="24">
+                <use href="./img/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icons" width="24" height="24">
+                <use href="./img/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icons" width="24" height="24">
+                <use href="./img/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
