--- a/portfolio.html
+++ b/portfolio.html
@@ -171,9 +171,28 @@
         </div>
         <div class="social-media">
           <p class="social-media-title">Social media</p>
-          <svg width="208" height="40" class="media-setup">
-            <use href="./img/icons.svg#icon-Traling-Icons"></use>
-          </svg>
+          <ul class="media-icons-footer">
+            <li>
+              <svg class="icons" width="24" height="24">
+                <use href="./img/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icons" width="24" height="24">
+                <use href="./img/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icons" width="24" height="24">
+                <use href="./img/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icons" width="24" height="24">
+                <use href="./img/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
