--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                   </li>
                   <li>
                     <svg class="icons" width="16" height="16">
-                      <use href="#./img/icons.svg#icon-twitter-1"></use>
+                      <use href="./img/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </li>
                   <li>
