--- a/index.html
+++ b/index.html
@@ -146,22 +146,22 @@
                 <p class="list-description1">Product Designer</p>
                 <ul class="media-icons">
                   <li>
-                    <svg class="icons" width="16" height="16">
+                    <svg width="16" height="16">
                       <use href="./img/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </li>
                   <li>
-                    <svg class="icons" width="16" height="16">
+                    <svg width="16" height="16">
                       <use href="./img/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </li>
                   <li>
-                    <svg class="icons" width="16" height="16">
+                    <svg width="16" height="16">
                       <use href="./img/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </li>
                   <li>
-                    <svg class="icons" width="16" height="16">
+                    <svg width="16" height="16">
                       <use href="./img/icons.svg#icon-linkedin-1"></use>
                     </svg>
                   </li>
@@ -179,22 +179,22 @@
                 <p class="list-description1">Fronted Developer</p>
                 <ul class="media-icons">
                   <li>
-                    <svg class="icons" width="16" height="16">
+                    <svg width="16" height="16">
                       <use href="./img/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </li>
                   <li>
-                    <svg class="icons" width="16" height="16">
+                    <svg width="16" height="16">
                       <use href="./img/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </li>
                   <li>
-                    <svg class="icons" width="16" height="16">
+                    <svg width="16" height="16">
                       <use href="./img/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </li>
                   <li>
-                    <svg class="icons" width="16" height="16">
+                    <svg width="16" height="16">
                       <use href="./img/icons.svg#icon-linkedin-1"></use>
                     </svg>
                   </li>
@@ -212,22 +212,22 @@
                 <p class="list-description1">Marketing</p>
                 <ul class="media-icons">
                   <li>
-                    <svg class="icons" width="16" height="16">
+                    <svg width="16" height="16">
                       <use href="./img/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </li>
                   <li>
-                    <svg class="icons" width="16" height="16">
+                    <svg width="16" height="16">
                       <use href="./img/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </li>
                   <li>
-                    <svg class="icons" width="16" height="16">
+                    <svg width="16" height="16">
                       <use href="./img/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </li>
                   <li>
-                    <svg class="icons" width="16" height="16">
+                    <svg width="16" height="16">
                       <use href="./img/icons.svg#icon-linkedin-1"></use>
                     </svg>
                   </li>
@@ -245,22 +245,22 @@
                 <p class="list-description1">UI Designer</p>
                 <ul class="media-icons">
                   <li>
-                    <svg class="icons" width="16" height="16">
+                    <svg width="16" height="16">
                       <use href="./img/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </li>
                   <li>
-                    <svg class="icons" width="16" height="16">
+                    <svg width="16" height="16">
                       <use href="./img/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </li>
                   <li>
-                    <svg class="icons" width="16" height="16">
+                    <svg width="16" height="16">
                       <use href="./img/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </li>
                   <li>
-                    <svg class="icons" width="16" height="16">
+                    <svg width="16" height="16">
                       <use href="./img/icons.svg#icon-linkedin-1"></use>
                     </svg>
                   </li>
